baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedAudio_render_prompt@InputNamedAudio.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedAudio.baml
---
fixture: InputNamedAudio.baml
function: FnInputNamedAudio
prompt:
  type: Completion
  text: Does this sound like a roar? Yes or no? One word no other characters.
