baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedClassLiteralProp_render_prompt@InputNamedClassLiteralProp.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedClassLiteralProp.baml
---
fixture: InputNamedClassLiteralProp.baml
function: FnInputNamedClassLiteralProp
prompt:
  type: Completion
  text: "Return the same object you were given.\n"
