baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedImageList_render_prompt@InputNamedImageList.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedImageList.baml
---
fixture: InputNamedImageList.baml
function: FnInputNamedImageList
prompt:
  type: Completion
  text: What colors do these have in common?
