baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedImage_render_prompt@InputNamedImage.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedImage.baml
---
fixture: InputNamedImage.baml
function: FnInputNamedImage
prompt:
  type: Completion
  text: Describe this in 4 words. One word must be the color
