baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__InputNamedVideo_render_prompt@InputNamedVideo.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/InputNamedVideo.baml
---
fixture: InputNamedVideo.baml
function: FnInputNamedVideo
prompt:
  type: Completion
  text: Use 5 words to describe the video.
