baml_language/crates/baml_build_request_tests/tests/snapshots/render_prompt__OutputBigIntegers_render_prompt@OutputBigIntegers.baml.snap
---
source: crates/baml_build_request_tests/tests/render_prompt.rs
expression: "&result"
input_file: crates/baml_build_request_tests/testdata/OutputBigIntegers.baml
---
fixture: OutputBigIntegers.baml
function: FnOutputBigIntegers
prompt:
  type: Completion
  text: "Please make sure every integer in the output has  digits.\nFor floats, provide a mix - from 0-10 places before the decimal point,\nand 1-10 places after the decimal point. Bet.\n\n"
